update tampilan header-container, map-container, menu-container

--- a/client/app/components/header-container/header-container.html
+++ b/client/app/components/header-container/header-container.html
@@ -1,1 +1,4 @@
-hallo header
+<div style="width: 100%; height: 30px; background-color: aquamarine;">
+    header
+    <button ng-click="$ctrl.menuContainerShow=true">menu</button>
+</div>
