--- a/client/app/components/map-container/map-container.html
+++ b/client/app/components/map-container/map-container.html
@@ -1,1 +1,2 @@
-hallo map
+<!-- height: calc(100% - 30px); dikurang tinggi header-container -->
+<div id="map" style="width: 100%; height: calc(100% - 30px);"></div>
