tambah fungsi simpan di menu-container

--- a/client/app/components/menu-container/menu-container.html
+++ b/client/app/components/menu-container/menu-container.html
@@ -1,4 +1,5 @@
-<div style="position: absolute; top: 0; right: 0; height: 100%; width: 150px; z-index: 9999999; background-color: gray;" ng-show="$ctrl.menuContainerShow">
+<div style="position: absolute; top: 0; right: 0; height: 100%; width: 300px; z-index: 9999999; background-color: gray;" ng-show="$ctrl.menuContainerShow">
     <button ng-click="$ctrl.menuContainerShow=false">close menu</button>
+    <button ng-click="simpan()">simpan</button>
     menu
 </div>
