tambah api, update menu-container

--- a/client/app/components/menu-container/menu-container.html
+++ b/client/app/components/menu-container/menu-container.html
@@ -1,5 +1,9 @@
-<div style="position: absolute; top: 0; right: 0; height: 100%; width: 300px; z-index: 9999999; background-color: gray;" ng-show="$ctrl.menuContainerShow">
+<div style="position: absolute; top: 0; right: 0; height: 100%; width: 300px; z-index: 9999999; background-color: gray;"
+    ng-show="$ctrl.menuContainerShow">
     <button ng-click="$ctrl.menuContainerShow=false">close menu</button>
     <button ng-click="simpan()">simpan</button>
-    menu
+    <div ng-repeat="area in groupArea">
+        <button ng-click="getArea(area)">{{area}}</button>
+        <br>
+    </div>
 </div>
