--- a/client/app/components/header-container/header-container.html
+++ b/client/app/components/header-container/header-container.html
@@ -1,4 +1,21 @@
-<div style="width: 100%; height: 30px; background-color: aquamarine;">
-    header
-    <button ng-click="$ctrl.menuContainerShow=true">menu</button>
+<div style="height: 100%; display: flex; flex-direction: column;">
+    <div style="flex: 1; position: relative;">
+        <div style="height: 100%; width: 500px; position: absolute; left: 60px;">
+            <img src="/img/logo-bmkg.png" style="height: 60px; position: absolute; transform: translate(0, -50%); top: 50%;">
+            <div style="position: absolute; background-color: black; width: 3px; height: 60px; transform: translate(0, -50%); top: 50%; left: 60px;"></div>
+            <h1 style="position: absolute; transform: translate(0, -100%); top: 50%; left: 75px;">Sistem Monitoring</h1>
+            <h3 style="position: absolute; transform: translate(0, -100%); top: 80%; left: 75px;">
+                Infomet Nelayan Sederhana
+            </h3>
+        </div>
+    </div>
+    <div style="flex-basis: 30px; background-color: #0C3259; padding: 0 0 0 20px; color: white;">
+        <div class="w3-bar">
+            <button class="w3-bar-item w3-button w3-padding-small">Monitoring</button>
+            <button class="w3-bar-item w3-button w3-padding-small">Wilayah</button>
+            <button class="w3-bar-item w3-button w3-padding-small">Infomet</button>
+            <button class="w3-bar-item w3-button w3-padding-small">Data Logger</button>
+        </div>
+    </div>
+    <div style="flex-basis: 8px; background-color: #299C4C;"></div>
 </div>
