--- a/client/app/components/side-bar/side-bar.html
+++ b/client/app/components/side-bar/side-bar.html
@@ -1,19 +1,24 @@
-<style>
-    .w3-panel-costom {
-        padding: 0.01em 16px;
-        margin-top: 8px !important;
-    }
-</style>
-<div class="w3-container" style="padding-top: 8px;">
-    Tambah Wilayah <button class="w3-button w3-padding-small w3-teal" ng-click="$ctrl.showModalTambahWilayah=true">+</button>
-    <div ng-repeat="_wilayah in wilayah">
-        <div class="w3-bar" style="display: flex; padding-top: 8px;">
-            <button class="w3-bar-item w3-button w3-padding-small w3-blue" style="flex: 4;" ng-click="selectWilayah(_wilayah)">{{_wilayah}}</button>
-            <button class="w3-bar-item w3-button w3-padding-small w3-teal" style="flex: 1;" ng-click="$ctrl.showModalEditWilayah=true">Edit</button>
-            <button class="w3-bar-item w3-button w3-padding-small w3-teal" style="flex: 1;">Hapus</button>
+<div class="w3-container" style="height: 100%; display: flex; flex-direction: column;">
+    <div style="background-color: aliceblue; flex-basis: 80px; padding-top: 8px;">
+        <label>
+            <b>Wilayah:</b>
+        </label>
+        <select class="w3-input w3-border w3-select" ng-options="o for o in wilayah" ng-model="wilayahSelected"
+            ng-change="eventChangeWilayah()"></select>
+    </div>
+    <div style="background-color: antiquewhite; flex: 1; overflow: scroll; overflow-x: hidden;">
+        <b>Daftar Area:</b>
+        <div class="w3-bar" style="padding-top: 8px; display: flex;" ng-repeat="_area in area track by $index">
+            <span class="w3-bar-item w3-button w3-left-align w3-blue w3-padding-small" style="flex: 4;" ng-mouseover="highlightArea($index)"
+                ng-mouseleave="removeHighlightArea()" ng-init="editStatus=false" ng-hide="editStatus">{{_area.properties.name}}</span>
+            <button class="w3-bar-item w3-button w3-teal w3-padding-small" style="flex: 1;" ng-hide="editStatus"
+                ng-click="editStatus=true; areaName=_area.properties.name;">Edit</button>
+            <input class="w3-bar-item w3-input w3-border w3-padding-small" type="text" style="flex: 4;" ng-show="editStatus"
+                ng-model="areaName">
+            <button class="w3-bar-item w3-button w3-teal w3-padding-small" style="flex: 1;" ng-init="editStatus=false"
+                ng-show="editStatus" ng-click="updateAreaName($index, areaName); editStatus=false;">Simpan</button>
+            <button class="w3-bar-item w3-button w3-teal w3-padding-small" style="flex: 1;" ng-click="removeArea($index)">Hapus</button>
         </div>
     </div>
+    <div style="background-color: aquamarine; flex-basis: 30px;">simpan</div>
 </div>
-
-<modal-tambah-wilayah show-modal-tambah-wilayah="$ctrl.showModalTambahWilayah" wilayah="wilayah"></modal-tambah-wilayah>
-<modal-edit-wilayah show-modal-edit-wilayah="$ctrl.showModalEditWilayah" wilayah="wilayah"></modal-edit-wilayah>
