tampil modal-peringatan-simpan-wilayah saat path location berubah

--- a/client/app/components/side-bar/side-bar.html
+++ b/client/app/components/side-bar/side-bar.html
@@ -25,4 +25,4 @@
     </div>
 </div>
 <modal-peringatan-simpan-wilayah show-modal-peringatan-simpan-wilayah="$ctrl.showModalPeringatanSimpanWilayah"
-    event-change-wilayah="$ctrl.eventChangeWilayah()" update-wilayah="$ctrl.updateWilayah()"></modal-peringatan-simpan-wilayah>
+    next-path="$ctrl.nextPath" event-change-wilayah="$ctrl.eventChangeWilayah()" update-wilayah="$ctrl.updateWilayah()"></modal-peringatan-simpan-wilayah>
