--- a/client/app/components/modal-peringatan-simpan-wilayah/modal-peringatan-simpan-wilayah.html
+++ b/client/app/components/modal-peringatan-simpan-wilayah/modal-peringatan-simpan-wilayah.html
@@ -1,7 +1,7 @@
 <div class="w3-modal" style="z-index: 99999;" ng-style="{ display: $ctrl.showModalPeringatanSimpanWilayah? 'block': 'none' }">
     <div class="w3-modal-content w3-card-4" style="width: 450px;">
         <header class="w3-container w3-blue">
-            <span class="w3-button w3-display-topright" ng-click="$ctrl.eventChangeWilayah(); $ctrl.showModalPeringatanSimpanWilayah=false;">&times;</span>
+            <span class="w3-button w3-display-topright" ng-click="_noUpdateWilayah()">&times;</span>
             <h4>Peringatan!</h4>
         </header>
         <div class="w3-container w3-padding">
